adding readme info

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,60 @@
-== README
+# Food For Thought Charity Website
+[Click here to see live Project (hosted on Heroku)](http://foodforthought-sgibbs.herokuapp.com/)
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+## Description
+A relatively full featured charity website requiring corporate donor login to donate excess food items to charity, gift shop (not requiring login access) with shopping cart functionality, live sales reporting (for admin) with charts and potential to be built out for inventory management.
 
-Things you may want to cover:
+Project designed and deployed within four days as part of General Assembly's Web Development Immersive bootcamp (week 12 project week).
 
-* Ruby version
+## Designed by
+[Steve Gibbs](https://github.com/SteveGibbs)
 
-* System dependencies
+## Features
 
-* Configuration
+#### Corporate Donor
 
-* Database creation
+1. Login to have ability to donote excess food - select from possible options.
+2. Can edit user profile.
 
-* Database initialization
+#### Other Customers
+1. Browse gifts
+2. Shopping cart to track items and proceed to checkout.
 
-* How to run the test suite
+#### Admin
+1. Order dashboard with live polling
+2. Sales chart of orders (live updating via AJAX)
+3. Edit donor and product catalogues and customer orders
+4. Admin login and authorization
 
-* Services (job queues, cache servers, search engines, etc.)
+## User instructions
+#### Admin login details:
+- Email: johndoe@gmail.com
+- Password: chicken
 
-* Deployment instructions
+#### Food Donor login:
+- Email: janedoe@gmail.com
+- Password: chicken
 
-* ...
+#### Contact Us page
+
+- google map
+
+#### Mobile responsive
+
+## Technology stack
+- [Ruby on Rails](http://guides.rubyonrails.org/) and [PostgreSQL](https://www.postgresql.org/) for back-end build and database
+- [Chart.js for Rails](http://www.chartjs.org) for charts
+- [Simple Grid](http://simplegrid.io/) CSS grid layout with mobile responsiveness
+- [Slick API](http://kenwheeler.github.io/slick/) for image carousels
+- [Will_paginate API](https://github.com/mislav/will_paginate) for product catalogue pagination
+- [jQuery](https://jquery.com/) library
+- bcrypt 3.1.7 for password encryption
+- Ruby, JavaScript, HTML5 and CSS3 as programming languages
+- [Heroku](https://www.heroku.com/) for cloud deployment
+- Googleapis for google maps
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+## New features under consideration
+- **Inventory tracking**
+- **Build out sales reporting**
+- **Payment and mailer functionality (was incorporated in the MGK Shopping Project so less of the above)
